# glimmer_led

./: .gitignore  BUILD.bazel  Cargo.toml  Embed.toml  MODULE.bazel  README.md  go.mod  style_guide.md
.agent/skills/bazel_run/: SKILL.md
.agent/skills/go_build_files/: SKILL.md
.agent/skills/go_dependencies/: SKILL.md
.cargo/: config.toml
.github/workflows/: ci_checks.yml
glimmer_server/: BUILD.bazel  main.go  server.go
src/: main.rs  ws2812.rs
