load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "glimmer_server_lib",
    srcs = [
        "main.go",
        "server.go",
    ],
    importpath = "github.com/minorhacks/glimmer_led/glimmer_server",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "glimmer_server",
    embed = [":glimmer_server_lib"],
    visibility = ["//visibility:public"],
)
